--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,5 @@
 // Начните писать стили здесь
+@import "./variables";
+@import "./global";
+@import "./blocks/container";
+@import "./blocks/main-header";
